--------
v5.0-git
--------

[mms] Improved login error reporting/logging in IMP (Request #9211).
[mms] Add hook to skip MDN prompt based on content of message headers.
[mms] Allow expand/collapse of folders in MIMP.
[mms] Use single, unified mailbox cache.
[mms] Add support for setting/retrieving special-use mailboxes from IMAP
      server.
[mms] Add preference to control if we check for recipient PGP public keys
      when replying (Request #7962).
[mms] Add preference to allow for automatic spam reporting when explicitly
      moving messages to the Spam mailbox (Request #6455).
[mms] Automatically determine view based on browser and 'dynamic_view'
      preference (Request #9159).
[mms] Add preference to define default font family/size for the HTML compose
      editor.
[mms] Honor nav_expanded preference (DIMP).
[mms] Allow admin to define list of safe e-mail addresses that will not
      experience HTML image blocking (Request #9129).
[mms] HTML compose editor uses Horde language for UI (Request #9084;
      leandro.damascena@gmail.com).
[mms] Add config option to disable multipart/related conversions
      (Request #9099).
[mms] Sentmail SQL driver now supports split read/write operation.
[mms] Pass compose message data to mailer backend via stream; much more
      efficient, especially with larger messages (Request #8909).
[mms] Add strip attachments support in DIMP.
[mms] Add PGP & S/MIME compose support to DIMP.
[mms] Check for incorrect identity on compose if a single recipient address
      is tied to a different identity than the sending identity.
[mms] Use CATENATE (RFC 4469), if available, to strip MIME parts (Request
      #8092).
[mms] Add preference to show flags created by other MUAs (Request #8882).
[mms] Added HTML signature support (Request #1406).
[mms] Simplified date sorting display (Ticket #8936).
[mms] Properly redirect messages pursuant to RFC 5322 [3.6.6].
[mms] Add redirect message capability to DIMP.